Working template blog

--- a/_posts/en/pages/2015-01-01-about.md
+++ b/_posts/en/pages/2015-01-01-about.md
@@ -12,11 +12,12 @@ navigation:
    url: "#linksweb"
 ---
 ![Yup, that's me](/images/layout/photos/photo-penseur.jpg){: class="avatar"}
-Hi! I'm William, aka Schoewilliam, and I'm a young, French & [Réunionese](http://en.wikipedia.org/wiki/R%C3%A9union) web designer. I have always been enthusiast about the idea of an open web in an open connected world. That is why I recognize myself through the values of the [Mozilla Manifesto](https://www.mozilla.org/en-US/about/manifesto/).
+Hello earthlings, we are [reify](http://www.vocabulary.com/dictionary/reify). We are basically a group of three Computer Science 
+enthusiasts and progrmmers. Our interests include everything that comes under the [umbrella](http://giphy.com/gifs/funny-film-xyRNC33DiD172) of Computer Science. 
+![Yup, that's me](/images/layout/photos/photo-penseur.jpg){: class="avatar"} 
+At this point let's introduce ourselves. I am [Shreyash Patodia](https://www.facebook.com/shreyash.patodia). I am 19 and I go to the University of Melbourne, in Melbourne duh !!
 
-I always seek to design simple, clean and lightweight interfaces, while keeping in mind my aim for creativity and elegance.  
-But the main principle I try to respect in my projects is to contribute to the growth and the adoption of web technology standards.  
-Finally, I pay particular attention to typography and its role in a modern interface.
+
 
 <!--more-->
 
