--- a/_posts/en/pages/2015-01-03-index.md
+++ b/_posts/en/pages/2015-01-03-index.md
@@ -1,8 +1,8 @@
 ---
-title: "William Dorffer [:Schoewilliam]"
+title: "reify"
 layout: index
 type: pages
-permalink: /en/
+permalink: /home
 navigation:
  - title: About
    url: "#about"
