About page completed

--- a/_posts/en/pages/2015-01-01-about.md
+++ b/_posts/en/pages/2015-01-01-about.md
@@ -4,18 +4,28 @@ type: pages
 layout: page
 permalink: /about/
 navigation:
- - title: Who am I?
+ - title: Who are we ?
    url: "#"
- - title: How to contact me
+ - title: How to contact us
    url: "#contact"
  - title: Links
    url: "#linksweb"
 ---
-![Yup, that's me](/images/layout/photos/photo-penseur.jpg){: class="avatar"}
+
+# Who are we ?
+
 Hello earthlings, we are [reify](http://www.vocabulary.com/dictionary/reify). We are basically a group of three Computer Science 
-enthusiasts and progrmmers. Our interests include everything that comes under the [umbrella](http://giphy.com/gifs/funny-film-xyRNC33DiD172) of Computer Science. 
+enthusiasts and progrmmers. Our interests include everything that comes under the [umbrella](http://giphy.com/gifs/funny-film-xyRNC33DiD172) of Computer Science.
 ![Yup, that's me](/images/layout/photos/photo-penseur.jpg){: class="avatar"} 
-At this point let's introduce ourselves. I am [Shreyash Patodia](https://www.facebook.com/shreyash.patodia). I am 19 and I go to the University of Melbourne, in Melbourne duh !!
+
+At this point let's introduce ourselves. I am [Shreyash Patodia](https://www.facebook.com/shreyash.patodia). I am 19 and I go to the [University of Melbourne](www.unimelb.edu.au/), in Melbourne duh !!
+
+![Yup, that's me](/images/layout/photos/photo-penseur.jpg){: class="avatar"} 
+This is [Yash Karnawat](https://www.facebook.com/yash.karnawat), he's a 20 year old Computer Science enthusiast who goes to [BITS Pilani](http://www.bits-pilani.ac.in/).
+
+![Yup, that's me](/images/layout/photos/photo-penseur.jpg){: class="avatar"} 
+Now let's address the elephant in the room, [Pulkit Agarwal](https://www.facebook.com/the.pulkitagarwal). He's also a student at BITS Pilani who is your everyday 'know it all' that happens to know things that make you gasp in the horror of his knowledge and your stupidness.
+
 
 
 
@@ -23,13 +33,18 @@ At this point let's introduce ourselves. I am [Shreyash Patodia](https://www.fac
 
 <hr class="large title" id="contact">
 
-# How to contact me
+# How to contact us
 
-Feel free to email me to request my services or start any conversation.  
-[schoewilliam(at)schoewilliam(dot)fr](mailto:schoewilliam@schoewilliam.fr)
+Feel free to email us to start a conversation or to help us make reify better. Any kind of feedback would be much appreicated.
 
-You might also want to check out my profiles on those platforms:
-[**Twitter**](http://twitter.com/schoewilliam) · 
+Yash: [yash95karnwat@gmail.com](mailto:yash95karnawat@gmail.com)
+
+Shreyash: [patodiashreyash32@gmail.com](mailto:patodiashreyash32@gmai.com)
+
+Pulkit: [thepulkitagarwal@gmail.com](mailto:thepulkitagarwal@gmail.com)
+
+Add us on any of these platforms :smiley: :
+[Yash's LinkedIn]() · 
 [Diaspora*](https://diaspora-fr.org/u/schoewilliam) · 
 [Github](https://github.com/Schoewilliam) · 
 [Mozillians.org](https://mozillians.org/en-US/u/schoewilliam/)
@@ -44,8 +59,5 @@ Some friends on the web<br>
 A few links I feel like sharing<br>
 {% for link in site.data.links %}<a href="{{ link.url }}" title="{{ link.text }}">{{ link.text }}</a>{% if forloop.last %}{% else %} · {% endif %}{% endfor %}
 
-<hr class="large title">
 
-# Support me
 
-<p style="text-align:center"><a href="https://flattr.com/submit/auto?user_id=Schoewilliam&url=http%3A%2F%2Fschoewilliam.fr" target="_blank"><img src="//button.flattr.com/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0"></a></p>
