home page turned into default path along with a couple of other minor tweaks

--- a/_posts/en/pages/2015-12-15-about.md
+++ b/_posts/en/pages/2015-12-15-about.md
@@ -14,14 +14,14 @@ navigation:
 
 Hello earthlings, we are [reify](http://www.vocabulary.com/dictionary/reify). We are basically a group of three Computer Science 
 enthusiasts and progrmmers. Our interests include everything that comes under the [umbrella](http://giphy.com/gifs/funny-film-xyRNC33DiD172) of Computer Science.
-![Yup, that's me](/images/layout/photos/photo-penseur.jpg){: class="avatar"} 
 
+![Yup, that's me](/images/layout/photos/shreyash.png){: class="avatar"} 
 At this point let's introduce ourselves. I am [Shreyash Patodia](https://www.facebook.com/shreyash.patodia). I am 19 and I go to the [University of Melbourne](www.unimelb.edu.au/), in Melbourne duh !!
 
-![Yup, that's me](/images/layout/photos/photo-penseur.jpg){: class="avatar"} 
+![Yup, that's me](/images/layout/photos/yash.png){: class="avatar"} 
 This is [Yash Karnawat](https://www.facebook.com/yash.karnawat), he's a 20 year old Computer Science enthusiast who goes to [BITS Pilani](http://www.bits-pilani.ac.in/).
 
-![Yup, that's me](/images/layout/photos/photo-penseur.jpg){: class="avatar"} 
+![Yup, that's me](/images/layout/photos/pulkit.png){: class="avatar"} 
 Now let's address the elephant in the room, [Pulkit Agarwal](https://www.facebook.com/the.pulkitagarwal). He's also a student at BITS Pilani who is your everyday 'know it all' that happens to know things that make you gasp in the horror of his knowledge and your stupidness.
 
 
