--- a/_posts/en/pages/2015-01-04-archive.md
+++ b/_posts/en/pages/2015-01-04-archive.md
@@ -2,7 +2,7 @@
 title: Blog
 layout: archive
 type: pages
-permalink: /en/archive/
+permalink: /archive/
 navigation:
  - title: All Posts
    url: "#allposts"
