More or less done barring page additions and changes

--- a/_posts/pages/2015-12-15-about.md
+++ b/_posts/pages/2015-12-15-about.md
@@ -16,7 +16,7 @@ Hello earthlings, we are [reify](http://www.vocabulary.com/dictionary/reify). We
 enthusiasts and progrmmers. Our interests include everything that comes under the [umbrella](http://giphy.com/gifs/funny-film-xyRNC33DiD172) of Computer Science.
 
 ![Yup, that's me](/images/layout/photos/shreyash.png){: class="avatar"} 
-At this point let's introduce ourselves. I am [Shreyash Patodia](https://www.facebook.com/shreyash.patodia). I am 19 and I go to the [University of Melbourne](www.unimelb.edu.au/), in Melbourne duh !!
+At this point let's introduce ourselves. I am [Shreyash Patodia](https://www.facebook.com/shreyash.patodia). I am 19 and I go to the [University of Melbourne](https://www.unimelb.edu.au), in Melbourne duh !!
 
 ![Yup, that's me](/images/layout/photos/yash.png){: class="avatar"} 
 This is [Yash Karnawat](https://www.facebook.com/yash.karnawat), he's a 20 year old Computer Science enthusiast who goes to [BITS Pilani](http://www.bits-pilani.ac.in/).
