--- a/_posts/pages/2015-12-15-about.md
+++ b/_posts/pages/2015-12-15-about.md
@@ -13,7 +13,7 @@ navigation:
 # Who are we ?
 
 Hello earthlings, we are [reify](http://www.vocabulary.com/dictionary/reify). We are basically a group of three Computer Science 
-enthusiasts and progrmmers. Our interests include everything that comes under the [umbrella](http://giphy.com/gifs/funny-film-xyRNC33DiD172) of Computer Science.
+enthusiasts and programmars. Our interests include everything that comes under the [umbrella](http://giphy.com/gifs/funny-film-xyRNC33DiD172) of Computer Science.
 
 ![Yup, that's me](/images/layout/photos/shreyash.png){: class="avatar"} 
 At this point let's introduce ourselves. I am [Shreyash Patodia](https://www.facebook.com/shreyash.patodia). I am 19 and I go to the [University of Melbourne](https://www.unimelb.edu.au), in Melbourne duh !!
