--- a/_posts/2013-09-18-clearer.markdown
+++ b/_posts/2013-09-18-clearer.markdown
@@ -18,3 +18,5 @@ Let's admit it, I went the extreme way. But that's exactly what I wanted. I want
 > Words are already an interface.
 
 An interface between you and the writer. Please, writers of any sort, remove any other interface which add layers that keep you away from the ones you want to reach. Think of the web as a book, a sheet of paper. Make it clean, beautiful, and pleasant. I would then spend hours and hours reading you. No doubt.
+
+{% gist thepulkitagarwal/8b54de31c9d6042cad0a %}
