About page added

--- a/_posts/pages/2015-12-15-about.md
+++ b/_posts/pages/2015-12-15-about.md
@@ -13,16 +13,21 @@ navigation:
 # Who are we ?
 
 Hello earthlings, we are [reify](http://www.vocabulary.com/dictionary/reify). We are basically a group of three Computer Science 
-enthusiasts and programmars. Our interests include everything that comes under the [umbrella](http://giphy.com/gifs/funny-film-xyRNC33DiD172) of Computer Science.
+enthusiasts, programmars and students. Our interests include everything that comes under the [umbrella](http://giphy.com/gifs/funny-film-xyRNC33DiD172) of Computer Science and we hope to be able to explore as much of this world as we can. This blog is meant to be able to document the things that we have done and also to help us reach a much wider audience who may share the same interests as us. So lets go about introducing the members of team reify:
 
 ![Yup, that's me](/images/layout/photos/shreyash.png){: class="avatar"} 
-At this point let's introduce ourselves. I am [Shreyash Patodia](https://www.facebook.com/shreyash.patodia). I am 19 and I go to the [University of Melbourne](https://www.unimelb.edu.au), in Melbourne duh !!
+
+ I am [Shreyash Patodia](https://www.facebook.com/shreyash.patodia). I study Computer Science at the [University of Melbourne](https://www.unimelb.edu.au). I have a keen interest in the fields of Artifical Intelligence, Algorithmic Study and Game Development. Apart from Computer Science, I am an avid football fan and support Manchester United. Feel free to email me, add me on LinkedIn or wherever. 
 
 ![Yup, that's me](/images/layout/photos/yash.png){: class="avatar"} 
-This is [Yash Karnawat](https://www.facebook.com/yash.karnawat), he's a 20 year old Computer Science enthusiast who goes to [BITS Pilani](http://www.bits-pilani.ac.in/).
+
+This is [Yash Karnawat](https://www.facebook.com/yash.karnawat),  Computer Science student who goes to [BITS Pilani](http://www.bits-pilani.ac.in/). He is really into AI, Machine Learning among an array of other things. He supports Chelsea Football Club(yeah, they are getting relegated).  
 
 ![Yup, that's me](/images/layout/photos/pulkit.png){: class="avatar"} 
-Now let's address the elephant in the room, [Pulkit Agarwal](https://www.facebook.com/the.pulkitagarwal). He's also a student at BITS Pilani who is your everyday 'know it all' that happens to know things that make you gasp in the horror of his knowledge and your stupidness.
+
+Now let's address the elephant in the room, [Pulkit Agarwal](https://www.facebook.com/the.pulkitagarwal). He's also a student at BITS Pilani and  your everyday 'know-it-all'. He has a really crappy sense of humour. But overall he's okay. 
+
+So yeah that's us. 
 
 
 
@@ -42,7 +47,7 @@ Yash:
     - [Github Account](https://github.com/yashkarnawat)
                                                                                                                  
 Shreyash:                                                                  
-		- [patodiashreyash32@gmail.com](mailto:patodiashreyash32@gmai.com)    
+		- [patodiashreyash32@gmail.com](mailto:patodiashreyash32@gmail.com)    
 		- [LinkedIn Profile](https://www.linkedin.com/profile/view?id=AAIAABXT0_YBjQZYSvlGdwrOqhJB2-CulyG39Os&trk=nav_responsive_tab_profile_pic)                                                                                                                
     - [Github Account](https://github.com/ShreyashPatodia)
 
