:postbox: Can-You-Get-There

--- a/_posts/2016-1-1-cygt.md
+++ b/_posts/2016-1-1-cygt.md
@@ -8,19 +8,24 @@ headimg_url: "/images/recursion.gif"
 author: shreyashpatodia
 ---
 
-Greetings everyone !! I hope you have been keeping well and enjoyed the New Year celebrations. As the new year brings new beginnings, we at Reify wanted to start off the blog in an attempt to document our crusades through the world of Computer Science. 
+Greetings everyone !! 
+I hope you have been keeping well and enjoyed your New Year celebrations. As the new year brings new beginnings, we at Reify wanted to start off a blog in an attempt to document our crusades through the world of Computer Science. So here is my first post:
 
 What I want to address in this piece is a combination of things, A quick introduction to the [Unity - Game Engine](https://unity3d.com/) and a quick walk-through the development process of a game that I built using Unity. 
 
-If you don't already know about Unity, it is an awesome engine that allows you to develop multi-platform games. You can check out it's website [here](https://unity3d.com/). [_Note: The tutorials on the official website are awesome !!_]. You can use [CLI Languages](https://en.wikipedia.org/wiki/List_of_CLI_languages) like C#, Boo or Javascript(_which is not really a CLI Language but the version used by Unity is_) for the scripts in your game. Unity makes it very simple to add the animations, shapes, textures and audio that you need to make your game amazing. It is also possible to make non-game applications on Unity, although it is a total over-kill and would probalby lead to very battery-hungry applications. So if you are at all interested in game development, Unity is a godsend and you should definitely check it out. 
+If you don't already know about Unity, it is an awesome engine that allows you to develop multi-platform games. You can check out it's website [here](https://unity3d.com/). [_Note: The tutorials on the official website are awesome !!_]. You can use [CLI Languages](https://en.wikipedia.org/wiki/List_of_CLI_languages) like C#, Boo or Javascript(_which is not really a CLI Language but the version used by Unity is_) for the scripts in your game. Unity makes it very simple to add the animations, shapes, textures, audio or any other elements that you need to make your game amazing. It is also possible to make applications that serve a different purpose from being games on Unity, although it is a total over-kill and would probalby lead to very battery-hungry applications. So if you are at all interested in game development, Unity is a godsend and you should definitely check it out. Even if you aren't do check out Unity.  
 
-Moving on to the game I made(_I'm calling it 'Can you get there ??' for now_)is a very basic game wherein the user attempts to navigate through a maze, dodging enemies while battling against the clock in order to get home. I got the idea for the game from an [AwfulMedia](https://www.youtube.com/user/AwfulMedia) tutorial. The tutorials by AwfulMedia for this game use Unity version 4.x while the latest version for Unity at the time of writing of the article is 5.3, so it may be advisable to do the scripting yourself as there are a few syntactical differences between v4.0 and v5.0.I use C# for scripting purposes but using JS or Boo should not alter the difficulty of developing the game. What the game has:
+Moving on to the game I made(_I'm calling it 'Can you get there ??' for now_). It is a very basic game wherein the user attempts to navigate through a maze, dodging enemies while battling against the clock in order to get home. I got the idea for the game from an [AwfulMedia](https://www.youtube.com/user/AwfulMedia) tutorial(_Note: The tutorials by AwfulMedia for this game use Unity version 4.x while the latest version for Unity at the time of writing of the article is 5.3, so it may be advisable to do the scripting yourself as there are a few syntactical differences between v4.0 and v5.0_). I use C# for scripting purposes but using JS or Boo should not alter the difficulty of developing the game. I would say building a working version of the game where you can actually play it is not hard at all but getting the GUI elements in and tying them together to the game to have seamless transitions is. I will link the repository to the game at the end of the article. 
+
+Features of the game:
 
 + Two complete levels.
-+ A Main Menu to help navigate through thre game.
-+ A world that allows for easy navigation to the levels and the main menu (_credits: [AwfulMedia](https://www.youtube.com/user/AwfulMedia)_) 
++ A Main Menu to help navigate through the game.
++ A world that allows for easy navigation to the levels and the main menu (_credits: [AwfulMedia](https://www.youtube.com/user/AwfulMedia)_).
 
-I think that's going to be all for my first post, attached below is a link to the resources of the game and my build for OS X. I hope you like it. 
+I think that's going to be all for my first post, [here](https://github.com/ShreyashPatodia/Can-You-Get-There) is a link to the repository. I hope you don't hate the game.
+
+P.S -> Everything that is related to the development of the game is in the Assets folder and you can open it up in Unity to check out all that I used.
 
 
 
