--- a/_posts/2016-1-1-cygt.md
+++ b/_posts/2016-1-1-cygt.md
@@ -4,7 +4,7 @@ published: true
 exacttime: "22:00:00"
 title: "Can you get there ??"
 category: "Unity - Game Engine"
-headimg_url: "/images/recursion.gif"
+headimg_url: "/images/cygt.png"
 author: shreyashpatodia
 ---
 
@@ -23,7 +23,7 @@ Features of the game:
 + A Main Menu to help navigate through the game.
 + A world that allows for easy navigation to the levels and the main menu (_credits: [AwfulMedia](https://www.youtube.com/user/AwfulMedia)_).
 
-I think that's going to be all for my first post, [here](https://github.com/ShreyashPatodia/Can-You-Get-There) is a link to the repository. I hope you don't hate the game.
+I think that's going to be all for my first post, [here](https://github.com/ShreyashPatodia/Can-You-Get-There) is a link to the repository.
 
 P.S -> Everything that is related to the development of the game is in the Assets folder and you can open it up in Unity to check out all that I used.
 
