post::video-detection-python

--- a/_posts/2016-1-1-cygt.md
+++ b/_posts/2016-1-1-cygt.md
@@ -25,7 +25,7 @@ Features of the game:
 
 I think that's going to be all for my first post, [here](https://github.com/ShreyashPatodia/Can-You-Get-There) is a link to the repository.
 
-P.S -> Everything that is related to the development of the game is in the Assets folder and you can open it up in Unity to check out all that I used.
+P.S Everything that is related to the development of the game is in the Assets folder and you can open it up in Unity to check out all that I used.
 
 
 
