Update About Page

--- a/_posts/pages/2015-12-15-about.md
+++ b/_posts/pages/2015-12-15-about.md
@@ -12,8 +12,8 @@ navigation:
 
 # Who are we ?
 
-Hello earthlings, we are [reify](http://www.vocabulary.com/dictionary/reify). We are basically a group of three Computer Science 
-enthusiasts, programmars and students. Our interests include everything that comes under the [umbrella](http://giphy.com/gifs/funny-film-xyRNC33DiD172) of Computer Science and we hope to be able to explore as much of this world as we can. This blog is meant to be able to document the things that we have done and also to help us reach a much wider audience who may share the same interests as us. So lets go about introducing the members of team reify:
+Hello earthlings, we are [reify](http://www.vocabulary.com/dictionary/reify). We are basically a duo of Computer Science 
+enthusiasts/programmers/students. Our interests include everything that comes under the [umbrella](http://giphy.com/gifs/funny-film-xyRNC33DiD172) of Computer Science and we hope to be able to explore as much of this world as we can. This blog is meant to be able to document the things that we have done and also to help us reach a much wider audience who may share the same interests as us. So lets go about introducing the members of team reify:
 
 ![Yup, that's me](/images/layout/photos/shreyash.png){: class="avatar"} 
 
@@ -22,7 +22,7 @@ enthusiasts, programmars and students. Our interests include everything that com
 
 ![Yup, that's me](/images/layout/photos/pulkit.png){: class="avatar"} 
 
-Now let's address the elephant in the room, [Pulkit Agarwal](https://www.facebook.com/the.pulkitagarwal). He's also a student at BITS Pilani and  your everyday 'know-it-all'. He has a really crappy sense of humour. But overall he's okay. 
+And I am [Pulkit Agarwal](https://www.facebook.com/the.pulkitagarwal). I study Computer Science at [BITS Goa](http://www.bits-pilani.ac.in/Goa/). Currently, I am interested in Web Development, and designing algorithms. Other than that, I really like good stories. And well thought out puns. Feel free to email Shreyash, add him on LinkedIn or wherever. Nobody was stopping you anyway.
 
 So yeah that's us. 
 
