Refactor 'about' sections

--- a/_posts/pages/2015-12-15-about.md
+++ b/_posts/pages/2015-12-15-about.md
@@ -12,22 +12,21 @@ navigation:
 
 # Who are we ?
 
-Hello earthlings, we are [reify](http://www.vocabulary.com/dictionary/reify). We are basically a duo of Computer Science 
+Hello earthlings, we are [reify](/2016/01/14/why-reify.html). We are basically a duo of Computer Science 
 enthusiasts/programmers/students. Our interests include everything that comes under the [umbrella](http://giphy.com/gifs/funny-film-xyRNC33DiD172) of Computer Science and we hope to be able to explore as much of this world as we can. This blog is meant to be able to document the things that we have done and also to help us reach a much wider audience who may share the same interests as us. So lets go about introducing the members of team reify:
 
-![Yup, that's me](/images/layout/photos/shreyash.png){: class="avatar"} 
+{% assign authors = site.data.authors %}
 
- I am [Shreyash Patodia](https://www.facebook.com/shreyash.patodia). I study Computer Science at the [University of Melbourne](https://www.unimelb.edu.au). I have a keen interest in the fields of Artifical Intelligence, Algorithmic Study and Game Development. Apart from Computer Science, I am an avid football fan and support Manchester United. Feel free to email me, add me on LinkedIn or wherever. 
+![Yup, that's me]({{ authors.shreyashpatodia.avatar }}){: class="avatar"} 
+
+ {{ authors.shreyashpatodia.description }} [[More About Me Here!]](/shreyashpatodia)
 
 
-![Yup, that's me](/images/layout/photos/pulkit.png){: class="avatar"} 
+![Yup, that's me]({{ authors.thepulkitagarwal.avatar }}){: class="avatar"} 
 
-And I am [Pulkit Agarwal](https://www.facebook.com/the.pulkitagarwal). I study Computer Science at [BITS Goa](http://www.bits-pilani.ac.in/Goa/). Currently, I am interested in Web Development, and designing algorithms. Other than that, I really like good stories. And well thought out puns. Feel free to email Shreyash, add him on LinkedIn or wherever. Nobody was stopping you anyway.
+And {{ authors.thepulkitagarwal.description }} [[More About Me Here!]](/thepulkitagarwal)
 
 So yeah that's us. 
-
-
-
 
 <!--more-->
 
@@ -35,9 +34,9 @@ So yeah that's us.
 
 # How to contact us
 
-Feel free to email us to start a conversation or to help us make reify better. Any kind of feedback would be much appreicated. Or you can connect with us on the following social platforms and we can be friends.
+Feel free to email us to start a conversation or to help us make reify better. Any kind of feedback would be much appreciated. Or you can connect with us on the following social platforms and we can be friends.
 
-                                                                                                                 
+
 Shreyash:                                                                  
 		- [patodiashreyash32@gmail.com](mailto:patodiashreyash32@gmail.com)    
 		- [LinkedIn Profile](https://www.linkedin.com/profile/view?id=AAIAABXT0_YBjQZYSvlGdwrOqhJB2-CulyG39Os&trk=nav_responsive_tab_profile_pic)                                                                                                                
@@ -45,7 +44,7 @@ Shreyash:
 
 Pulkit:                                                                     
     - [thepulkitagarwal@gmail.com](mailto:thepulkitagarwal@gmail.com)    
-		- [LinkedIn Profile](https://www.linkedin.com/profile/view?id=AAkAAApLGSoBCoRlXjOyw56XZkg-nl9wfD36sGE&authType=NAME_SEARCH&authToken=dsg7&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A172693802%2CauthType%3ANAME_SEARCH%2Cidx%3A1-2-2%2CtarId%3A1450159063707%2Ctas%3APulkit%20)                                                                                            
+		- [LinkedIn Profile](in.linkedin.com/in/thepulkitagarwal)                                                                                            
     - [Github Account](https://github.com/thepulkitagarwal)
 
 		 
